archive/cluster-config/argocd/vs-argocd-ui.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-ui-route
  namespace: argocd
spec:
  hosts:
  - argo-cd-argocd-server
  http:
  - name: "argocd-ui"
    match:
    - uri:
        prefix: "/argocd"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: argo-cd-argocd-server.argocd.svc.cluster.local
        port:
          number: 8080
